# portfolio_fastapi_v

./: .dockerignore  .env.example  .gitignore  ARTICLES_FIXES_SUMMARY.md  Dockerfile  FONT_UPDATE_SUMMARY.md  OPTIMIZATION_SUMMARY.md  README.md  REFACTORING_SUMMARY.md  UV_DEVELOPMENT.md  UV_SETUP.md  blog.html  card.html  hero_standalone.html  main.py  nixpacks.toml  pyproject.toml  railway.toml  render-start.sh  requirements.txt  run_dev.ps1
app/: __init__.py
app/core/: config.py  security.py  templates.py
app/models/: portfolio.py
app/routes/: __init__.py  admin.py  api.py  pages.py
app/services/: portfolio_service.py
app/templates/: base.html
app/templates/admin/: add_article.html  login.html  manage_articles.html
app/templates/components/: about.html  article_card.html  articles.html  certifications_card.html  chat_interface.html  contact.html  education_card.html  featured_project_card.html  footer.html  hero.html  navigation.html  noteonai.html  project_card.html  skills_card.html  work_insights.html
app/templates/pages/: all_articles.html  articles.html  index.html  noteonai.html  projects.html
data/: articles.json  blog_metadata.json  noteonai.json
static/css/: styles-modular.css
static/css/modules/: README.md  animations.css  articles.css  chat-redesign.css  chat.css  components.css  footer.css  hero.css  navbar.css  responsive.css  sections.css  utilities.css  variables.css
static/js/: .env.example
static/js/modules/: animations.js  articles.js  chat.js  navigation.js  typing.js  utils.js
(+26 files in other folders)
